correct css errors for testing

--- a/newsletter_files/print.css
+++ b/newsletter_files/print.css
@@ -134,7 +134,7 @@ p {
 }
 
 table {
-    border-collapse: collapse !important
+    border-collapse: collapse !important;
 }
 
 #preheaderLeftContent {
